2005-03-13  Robin Ericsson  <lobbin@localhost.nu>

	* src/gnome-mud.h [connection_data]: Added member naws.
	Added a few prototypes.

	* src/init.c (create_connection_data): Set news to FALSE and connect
	signals so we can detect changes in displayed w/h.

	* src/telnet.c (write_octet): Removed.
	(write_escaped_octet): Added.
	(connection_send_naws): Now escapes values of 255.
	(pre_process): Moved IAC WILL NAWS to connection_send_naws.

	* src/window.c (vte_might_need_naws): Added.
	(vte_char_size_changed_cb): Added.
	(vte_resize_window_cb): Added.

2005-03-07  Robin Ericsson  <lobbin@localhost.nu>

	* gnome-mud.schemas.in, ui/directions.glade: Changed short name to 
	"Directional keybindings", fixes bugs #169184.

2005-03-04  Robin Ericsson  <lobbin@localhost.nu>

	* po/POTFILES.in: Added src/directions.c and ui/directions.glade.

2005-03-03  Robin Ericsson  <lobbin@localhost.nu>

	* Makefile.am: Added ui subdir.

	* configure.ac: Added requirement for libglade-2.0.

	* gnome-mud.schemas.in: Added default directions to Default profile.

	* src/Makefile.am, src/directions.[ch]: Added.

	* src/gnome-mud.h [profile_data]: directions added.

	* src/init.c (text_entry_key_press_cb): Use dynamic directions from
	profile.
	* src/map.c (user_command),
	(get_direction_text): Ditto.

	* src/profiles.c (profile_load_directions): Added.
	(load_profiles): Load directions.
	(profilelist_profile): Set directions.
	(profilelist_directions_cb): Added.
	(window_profile_edit): Added direction button in toolbar menu.

	* ui/Makefile.am, ui/directions.glade, ui/.cvsignore: Added.

2005-02-16  Jordi Mallach  <jordi@sindominio.net>

	* Makefile.am (EXTRA_DIST): Add gnome-mud.spec.
	* configure.ac (AC_OUTPUT): Add gnome-mud.spec.
	* gnome-mud.spec.in: Add RPM spec file from Adam Luchjenbroers.

2004-11-24  Amanpreet Singh Alam <amanlinux@netscape.net>

	* configure.ac: Add pa to ALL_LINGUAS

2004-05-01  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.
